--- a/exercice2/index.html
+++ b/exercice2/index.html
@@ -14,9 +14,12 @@
         align-content: center;
         justify-content: center;
         align-items: center;
-        height: 100vh;
+        height: 50vh;
       "
     >
+      <div
+        style="display: flex; justify-content: center; align-items: center"
+      ></div>
       <div
         style="
           width: 100%;
@@ -24,24 +27,62 @@
           border-radius: 50px;
           background-color: #f0f0f0;
           overflow: hidden;
+          box-shadow: rgba(0, 0, 0, 0.12) 0px 1px 3px,
+            rgba(0, 0, 0, 0.24) 0px 1px 2px;
         "
       >
         <div
           style="
             width: 0;
             height: 100%;
+            border: 1px solid black;
             background: linear-gradient(
               to right,
-              green,
-              yellow,
-              orange,
+              rgb(102, 0, 9),
+              rgb(144, 0, 0),
+              rgb(204, 0, 0),
               red
-            ); /* Gradient color */
+            );
           "
           id="progressFill"
         ></div>
+        <button
+          id="resetButton"
+          style="
+            position: absolute;
+            top: 50%;
+            left: 25%;
+            border: none;
+            padding: 15px;
+            border-radius: 15px;
+            font-size: xx-large;
+            box-shadow: rgba(60, 64, 67, 0.3) 0px 1px 2px 0px,
+              rgba(60, 64, 67, 0.15) 0px 1px 3px 1px;
+            cursor: pointer;
+          "
+        >
+          Reset
+        </button>
+        <span
+          style="
+            position: absolute;
+
+            left: 50%;
+
+            color: black;
+            font-size: xx-large;
+            font-family: fantasy;
+          "
+          id="progressPercentage"
+        >
+          0%
+        </span>
       </div>
     </div>
+    <div
+      style="display: flex; justify-content: center; align-items: center"
+    ></div>
+
     <script src="./index.js"></script>
     <script>
       const instance = new ProgressBar(1000);
