--- a/exercice6/index.html
+++ b/exercice6/index.html
@@ -23,7 +23,7 @@
         justify-content: center;
         align-items: center;
         flex-direction: column;
-        background-image: url('./paper.jpg');
+        background-image: url('./paps.jpg');
         background-size: contain;
         box-shadow: rgba(0, 0, 0, 0.25) 0px 14px 28px,
           rgba(0, 0, 0, 0.22) 0px 10px 10px;
