--- a/exercice7/index.html
+++ b/exercice7/index.html
@@ -38,6 +38,7 @@
         color: #63de00;
         box-shadow: rgba(0, 0, 0, 0.25) 0px 14px 28px,
           rgba(0, 0, 0, 0.22) 0px 10px 10px;
+        border: 1px solid #3c3c3c;
       }
 
       .console .consolebody::-webkit-scrollbar {
@@ -61,7 +62,7 @@
       justify-content: center;
       align-items: center;
       height: 100vh;
-      background-image: url(bg.png);
+      background-image: url(doggo.png);
       background-size: cover;
       background-repeat: no-repeat;
     "
@@ -71,12 +72,11 @@
         <p>guest@tgw</p>
       </header>
       <div class="consolebody">
-        <p>> type help to see a list of commands</p>
+        <p>> Type help to see a list of commands</p>
         <p>> <input id="commandInput" type="text" autofocus /></p>
       </div>
     </div>
 
-    <script src="./index.js"> 
-    </script>
+    <script src="./index.js"></script>
   </body>
 </html>
